[gd_scene load_steps=3 format=2]

[ext_resource path="res://TypingLabelCustom.gd" type="Script" id=1]
[ext_resource path="res://TypingTextEffect.gd" type="Script" id=2]

[node name="TypingTextEffect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ExampleText" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -251.0
margin_top = 59.0
margin_right = 251.0
margin_bottom = 124.0
text = "Night. The darkness keeps me from sleep. It was supposed to have the opposite effect but I can't stop thinking about what lurks beyond the black veil."
autowrap = true

[node name="Modes" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -126.0
margin_right = 163.0
margin_bottom = -86.0
alignment = 1

[node name="AppendMode" type="Button" parent="Modes"]
margin_right = 92.0
margin_bottom = 40.0
toggle_mode = true
text = "Append Text"

[node name="PercentMode" type="Button" parent="Modes"]
margin_left = 96.0
margin_right = 204.0
margin_bottom = 40.0
toggle_mode = true
text = "Percent Visible"

[node name="CustomMode" type="Button" parent="Modes"]
margin_left = 208.0
margin_right = 325.0
margin_bottom = 40.0
toggle_mode = true
text = "Custom Solution"

[node name="Label" type="Label" parent="Modes/CustomMode"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.5
margin_top = 7.0
margin_right = 41.5
margin_bottom = 21.0
text = "Fill Character"

[node name="FillChar" type="TextEdit" parent="Modes/CustomMode"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.5
margin_top = 23.0
margin_right = 42.5
margin_bottom = 63.0
text = " "

[node name="Randomise" type="CheckBox" parent="Modes/CustomMode"]
margin_left = 10.0
margin_top = 109.0
margin_right = 109.0
margin_bottom = 133.0
text = "Randomise"

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = 24.0
margin_right = 20.5
margin_bottom = 44.0
toggle_mode = true
text = "Start"

[node name="TypingLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -251.0
margin_top = -98.0
margin_right = 251.0
margin_bottom = -33.0
autowrap = true
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="TypingLabel"]
wait_time = 0.05

[node name="TimerDelay" type="SpinBox" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -12.0
margin_right = 37.0
margin_bottom = 12.0
min_value = 0.05
max_value = 5.0
step = 0.05
value = 0.05

[connection signal="pressed" from="Modes/AppendMode" to="." method="_on_AppendMode_pressed"]
[connection signal="pressed" from="Modes/PercentMode" to="." method="_on_PercentMode_pressed"]
[connection signal="pressed" from="Modes/CustomMode" to="." method="_on_CustomMode_pressed"]
[connection signal="text_changed" from="Modes/CustomMode/FillChar" to="." method="_on_FillChar_text_changed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="value_changed" from="TimerDelay" to="." method="_on_TimerDelay_value_changed"]
